--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -10,12 +10,12 @@
   <%= @actor.dob %>
 </p>
 
-<p>
-  <b>Roles</b>
+<b>Roles</b>
+<ul>
   <% @actor.roles.each do |role| %>
-    <%= role.character_name %>
+    <li>as <%= role.character_name %> in <%= role.movie.title %></li>
   <% end %>
-</p>
+</ul>
 
 <%= link_to 'Edit', edit_actor_path(@actor) %> |
 <%= link_to 'Back', actors_path %>
