--- a/app/views/directors/_form.html.erb
+++ b/app/views/directors/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :dob %><br />
-    <%= f.date_select :dob %>
+    <%= f.date_select :dob, :start_year => 1920 %>
   </div>
   <div class="actions">
     <%= f.submit %>
