--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -19,12 +19,12 @@
   <div class="field">
     <%= f.label :movie_id %><br />
     <%# f.number_field :movie_id %>
-    <%= f.select  %>
+    <%= f.collection_select :movie_id, Movie.all, :id, :title %>
   </div>
 
   <div class="field">
     <%= f.label :actor_id %><br />
-    <%= f.number_field :actor_id %>
+    <%= f.collection_select :actor_id, Actor.all, :id, :name %>
   </div>
 
   <div class="actions">
