--- a/app/views/directors/_form.html.erb
+++ b/app/views/directors/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :slug %><br />
+    <%= f.text_field :slug %>
+  </div>
+
   <div class="field">
     <%= f.label :dob %><br />
     <%= f.date_select :dob, :start_year => 1920 %>
