added users and votes.

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -15,6 +15,23 @@
   <%= @movie.director.name %>
 </p>
 
+<p>
+  <b>Votes:</b>
+  <%= @movie.votes.count %>
+
+  <ul>
+  <% @movie.votes.each do |vote| %>
+  <li><%= vote.user.username %></li>
+  <% end %>
+  </ul>
+
+  <!-- would like to do this eventually -->
+  <%# form_tag do %>
+    <%# check_box_tag(:movie_id) %>
+    <%# label_tag(:movie_id, "Vote for this movie") %>
+  <%# end %>
+</p>
+
 
 <b>Cast:</b>
   <ul>
