--- a/app/views/directors/_form.html.erb
+++ b/app/views/directors/_form.html.erb
@@ -16,10 +16,10 @@
     <%= f.text_field :name %>
   </div>
 
-  <div class="field">
-    <%= f.label :slug %><br />
-    <%= f.text_field :slug %>
-  </div>
+  <!-- <div class="field"> -->
+    <!-- <%# f.label :slug %><br /> -->
+    <%# f.text_field :slug %>
+  <!-- </div> -->
 
   <div class="field">
     <%= f.label :dob %><br />
