--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,23 +6,40 @@
 </p>
 
 <p>
+  <b>Director:</b>
+  <%= @movie.director.name %>
+</p>
+
+<p>
   <b>Year:</b>
   <%= @movie.year %>
 </p>
 
-<p>
-  <b>Director:</b>
-  <%= @movie.director.name %>
-</p>
+<b>Cast:</b>
+  <ul>
+    <!-- using the has many through -->
+    <% @movie.actors.each do |actor| %>
+      <li><%= actor.name %> </li>
+    <% end %>
+
+  <% @movie.roles.each do | role | %>
+    <li><%= role.actor.name %> as <%= role.character_name %></li>
+  <% end %>
+</ul>
 
 <p>
   <b>Votes:</b>
   <%= @movie.votes.count %>
 
   <ul>
-  <% @movie.votes.each do |vote| %>
-  <li><%= vote.user.username %></li>
+  <!-- has man through let us do -->
+  <% @movie.users.each do |user| %>
+    <li><%= user.username %></li>
   <% end %>
+
+  <%# @movie.votes.each do |vote| %>
+  <!-- <li><%# vote.user.username %></li> -->
+  <%# end %>
   </ul>
 
   <!-- would like to do this eventually -->
@@ -31,16 +48,6 @@
     <%# label_tag(:movie_id, "Vote for this movie") %>
   <%# end %>
 </p>
-
-
-<b>Cast:</b>
-  <ul>
-  <% @movie.roles.each do | role | %>
-    <li><%= role.character_name %></li>
-  <% end %>
-</ul>
-
-
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
